# AssignmentGenerator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Tasks/: CMakeLists.txt  Registrator.hpp  TaskBase.cpp  TaskBase.hpp  TaskBayes.cpp  TaskFactory.cpp  TaskFactory.hpp  TaskMoney.cpp
Tasks/Base/: Format.hpp  Registrator.hpp  Settings.cpp  Settings.hpp  TaskBase.cpp  TaskBase.hpp  TaskFactory.cpp  TaskFactory.hpp
